# python-project-52

./: .coverage  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  task_manager.db
.github/workflows/: project_CI.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: .env_example  mixins.py  settings.py  test.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_data.json  test_users.json  time.json  user.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py  views.py  wsgi.py
task_manager/task_manager/templates/: index.html
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description_tasklabelrelationships_and_more.py  0002_initial.py
task_manager/templates/: 404.html  base.html  delete.html  form.html  index.html  labels.html  login.html  signup.html  statuses.html  task_page.html  tasks.html  users.html
task_manager/templates/labels/: labels.html
task_manager/templates/layouts/: delete.html  form.html
task_manager/templates/statuses/: statuses.html
task_manager/templates/tasks/: task_page.html  tasks.html
task_manager/templates/users/: users.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+3 files in other folders)
