[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Study project No. 4 'Task manager'"
authors = ["KarinA <abdullaeva.karina.r@gmail.com>"]
readme = "README.md"
repository = "https://github.com/KarinaAbd/python-project-52"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
